tests/ui/core_cancel_kind_reintroduction.stderr
error[E0432]: unresolved imports `hibana::integration::cap::advanced::CancelAckKind`, `hibana::integration::cap::advanced::CancelKind`
 --> tests/ui/core_cancel_kind_reintroduction.rs:1:42
  |
1 | use hibana::integration::cap::advanced::{CancelAckKind, CancelKind};
  |                                          ^^^^^^^^^^^^^  ^^^^^^^^^^ no `CancelKind` in `integration::cap::advanced`
  |                                          |
  |                                          no `CancelAckKind` in `integration::cap::advanced`
